# gravitas_prime_dev

./: .gitignore  freqs.npy  pyproject.toml  save_to_2d_map.py  syncoredb.ipynb  test copy.ipynb  test.ipynb  test1.ipynb  testutils.py
coredldev/: __init__.py
coredldev/_resources/: eos_to_index_map.py
coredldev/_resources/CoRe_DB/BAM_0001/: metadata_main.txt
coredldev/_resources/CoRe_DB/BAM_0002/: metadata_main.txt
coredldev/_resources/CoRe_DB/BAM_0003/: metadata_main.txt
coredldev/_resources/CoRe_DB/BAM_0004/: metadata_main.txt
coredldev/_resources/CoRe_DB/BAM_0005/: metadata_main.txt
coredldev/_resources/CoRe_DB/BAM_0006/: metadata_main.txt
coredldev/_resources/CoRe_DB/BAM_0007/: metadata_main.txt
coredldev/finders/: file.py  h5.py
coredldev/finders/distance_scaling/: h5.py
coredldev/preprocessing/: to_tensor.py
coredldev/preprocessing/raw_postmerger/: detector_angle_mixing.py  distance_scale.py  fast_detector_angle_mixing.py
coredldev/sources/: __init__.py
coredldev/sources/d1/: h5.py
coredldev/sources/d2/: file.py  folder.py  h5.py
coredldev/sources/distance_scaling/: h5.py
coredldev/utilites/: _NoiseGenerator.py  _preprocessing.py  export.py  fastnoise.py  noise.py
src/: bilby_whitening_experiment.ipynb  bns.ipynb  syncoredb.ipynb  test.ipynb  trace_steps.ipynb
src/coredldev/: dataloaders.py  dataset.py
src/coredldev/_filepaths/: _filepaths.py
src/coredldev/_resources/: freqs.npy
src/coredldev/finders/: folder.py
src/coredldev/preprocessing/: whiten.py
src/coredldev/utilites/: pipeline.py
(+838 files in other folders)
