[project]
name = "core-db-pytorch-dataloaders-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilby>=2.6.0",
    "cutensor>=1.6.0.3",
    "gwpy>=3.0.13",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pycbc>=2.9.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "tqdm>=4.67.1",
]
